--- a/about.html
+++ b/about.html
@@ -100,104 +100,102 @@
                     </div>
 
                     <h3 id="administrators">임원진</h3>
-                    <main class="wrap">
-    <h1 class="section-title">임원진</h1>
+                    <div class="wrap">
 
-    <section class="leaders-grid">
-      <!-- 카드 예시들 (원하면 JS로 반복 생성) -->
-      <article class="leader-card">
-        <div class="avatar" aria-hidden="true"></div>
-        <div class="card-body">
-          <h3 class="name">이름</h3>
-          <div class="role">회장 · Club Lead</div>
-          <p class="desc">동아리 총괄, 연간 로드맵/대외 커뮤니케이션.</p>
-          <div class="btn-row">
-            <button class="pill">운영</button>
-            <button class="pill">PM</button>
-          </div>
-        </div>
-      </article>
+                        <section class="leaders-grid">
+                            <article class="leader-card">
+                            <div class="avatar" aria-hidden="true"></div>
+                            <div class="card-body">
+                            <h3 class="name">이름</h3>
+                            <div class="role">회장 · Club Lead</div>
+                            <p class="desc">동아리 총괄, 연간 로드맵/대외 커뮤니케이션.</p>
+                            <div class="btn-row">
+                                <button class="pill">운영</button>
+                                <button class="pill">PM</button>
+                            </div>
+                            </div>
+                        </article>
 
-      <article class="leader-card">
-        <div class="avatar"></div>
-        <div class="card-body">
-          <h3 class="name">이름</h3>
-          <div class="role">부회장 · Vice Lead</div>
-          <p class="desc">프로젝트 총괄 및 외부 연계 업무를 담당합니다.</p>
-          <div class="btn-row">
-            <button class="pill">운영</button>
-            <button class="pill">PM</button>
-          </div>
-        </div>
-      </article>
+                        <article class="leader-card">
+                            <div class="avatar"></div>
+                            <div class="card-body">
+                            <h3 class="name">이름</h3>
+                            <div class="role">부회장 · Vice Lead</div>
+                            <p class="desc">프로젝트 총괄 및 외부 연계 업무를 담당합니다.</p>
+                            <div class="btn-row">
+                                <button class="pill">운영</button>
+                                <button class="pill">PM</button>
+                            </div>
+                            </div>
+                        </article>
 
-      <article class="leader-card">
-        <div class="avatar"></div>
-        <div class="card-body">
-          <h3 class="name">이름</h3>
-          <div class="role">교육 · Education</div>
-          <p class="desc">스터디 커리큘럼과 교육 세션을 책임집니다.</p>
-          <div class="btn-row">
-            <button class="pill">운영</button>
-            <button class="pill">PM</button>
-          </div>
-        </div>
-      </article>
+                        <article class="leader-card">
+                            <div class="avatar"></div>
+                            <div class="card-body">
+                            <h3 class="name">이름</h3>
+                            <div class="role">교육 · Education</div>
+                            <p class="desc">스터디 커리큘럼과 교육 세션을 책임집니다.</p>
+                            <div class="btn-row">
+                                <button class="pill">운영</button>
+                                <button class="pill">PM</button>
+                            </div>
+                            </div>
+                        </article>
 
-      <article class="leader-card">
-        <div class="avatar"></div>
-        <div class="card-body">
-          <h3 class="name">이름</h3>
-          <div class="role">프로젝트 · Project</div>
-          <p class="desc">웹·앱 프로젝트 기획 및 리드 역할을 수행합니다.</p>
-          <div class="btn-row">
-            <button class="pill">운영</button>
-            <button class="pill">PM</button>
-          </div>
-        </div>
-      </article>
+                        <article class="leader-card">
+                            <div class="avatar"></div>
+                            <div class="card-body">
+                            <h3 class="name">이름</h3>
+                            <div class="role">프로젝트 · Project</div>
+                            <p class="desc">웹·앱 프로젝트 기획 및 리드 역할을 수행합니다.</p>
+                            <div class="btn-row">
+                                <button class="pill">운영</button>
+                                <button class="pill">PM</button>
+                            </div>
+                            </div>
+                        </article>
 
-      <article class="leader-card">
-        <div class="avatar"></div>
-        <div class="card-body">
-          <h3 class="name">이름</h3>
-          <div class="role">운영 · Operations</div>
-          <p class="desc">행정 및 대외 일정 조율을 담당합니다.</p>
-          <div class="btn-row">
-            <button class="pill">운영</button>
-            <button class="pill">PM</button>
-          </div>
-        </div>
-      </article>
+                        <article class="leader-card">
+                            <div class="avatar"></div>
+                            <div class="card-body">
+                            <h3 class="name">이름</h3>
+                            <div class="role">운영 · Operations</div>
+                            <p class="desc">행정 및 대외 일정 조율을 담당합니다.</p>
+                            <div class="btn-row">
+                                <button class="pill">운영</button>
+                                <button class="pill">PM</button>
+                            </div>
+                            </div>
+                        </article>
 
-      <article class="leader-card">
-        <div class="avatar"></div>
-        <div class="card-body">
-          <h3 class="name">이름</h3>
-          <div class="role">디자인 · Design</div>
-          <p class="desc">브랜딩 및 디자인 리소스를 관리합니다.</p>
-          <div class="btn-row">
-            <button class="pill">운영</button>
-            <button class="pill">PM</button>
-          </div>
-        </div>
-      </article>
+                        <article class="leader-card">
+                            <div class="avatar"></div>
+                            <div class="card-body">
+                            <h3 class="name">이름</h3>
+                            <div class="role">디자인 · Design</div>
+                            <p class="desc">브랜딩 및 디자인 리소스를 관리합니다.</p>
+                            <div class="btn-row">
+                                <button class="pill">운영</button>
+                                <button class="pill">PM</button>
+                            </div>
+                            </div>
+                        </article>
 
-      <article class="leader-card">
-        <div class="avatar"></div>
-        <div class="card-body">
-          <h3 class="name">이름</h3>
-          <div class="role">홍보 · PR</div>
-          <p class="desc">홍보 및 외부 커뮤니케이션 전략을 담당합니다.</p>
-          <div class="btn-row">
-            <button class="pill">운영</button>
-            <button class="pill">PM</button>
-          </div>
-        </div>
-      </article>
+                        <article class="leader-card">
+                            <div class="avatar"></div>
+                            <div class="card-body">
+                            <h3 class="name">이름</h3>
+                            <div class="role">홍보 · PR</div>
+                            <p class="desc">홍보 및 외부 커뮤니케이션 전략을 담당합니다.</p>
+                            <div class="btn-row">
+                                <button class="pill">운영</button>
+                                <button class="pill">PM</button>
+                            </div>
+                            </div>
+                        </article>
 
-    </section>
-  </main>
+                        </section>
+                    </div>
 
                 </div>
                     
